--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "mongoose-lesson",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
     "seed": "node seed.js",
-    "clear": "node clearDb.js"
+    "clear": "node clearDb.js",
+    "start":"node app.js"
   },
   "keywords": [],
   "author": "",
