--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "nodemon app.js",
     "seed": "node seed.js",
     "clear": "node clearDb.js",
-    "start":"node app.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-status": "^1.5.3",
     "mongoose": "^6.7.2"
